--- a/resources/assets/files/otm-mapping.json
+++ b/resources/assets/files/otm-mapping.json
@@ -21,7 +21,7 @@
             ]
         },
         {
-            "app_concept": "Demand",
+            "app_concept": "Request",
             "ontomap_concept": "Demand",
             "properties": 
             [
