The contact feature implemented.

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,16 +1,28 @@
 {
     "/admin/app.js": "/admin/app.js",
+    "/admin/app.js.map": "/admin/app.js.map",
     "/js/app.js": "/js/app.js",
     "/admin/glyphicons.css": "/admin/glyphicons.css",
     "/css/app.css": "/css/app.css",
     "/admin/app.css": "/admin/app.css",
     "/admin/vendor.css": "/admin/vendor.css",
     "/admin/editors/medium.css": "/admin/editors/medium.css",
+    "/js/app.js.map": "/js/app.js.map",
+    "/admin/glyphicons.css.map": "/admin/glyphicons.css.map",
+    "/css/app.css.map": "/css/app.css.map",
+    "/admin/app.css.map": "/admin/app.css.map",
+    "/admin/vendor.css.map": "/admin/vendor.css.map",
+    "/admin/editors/medium.css.map": "/admin/editors/medium.css.map",
     "/admin/editors/tinymce.js": "/admin/editors/tinymce.js",
+    "/admin/editors/tinymce.js.map": "/admin/editors/tinymce.js.map",
     "/admin/vendor.js": "/admin/vendor.js",
+    "/admin/vendor.js.map": "/admin/vendor.js.map",
     "/admin/editors/ckeditor.js": "/admin/editors/ckeditor.js",
+    "/admin/editors/ckeditor.js.map": "/admin/editors/ckeditor.js.map",
     "/admin/editors/medium.js": "/admin/editors/medium.js",
+    "/admin/editors/medium.js.map": "/admin/editors/medium.js.map",
     "/admin/theme.js": "/admin/theme.js",
+    "/admin/theme.js.map": "/admin/theme.js.map",
     "/admin/editors/config.js": "/admin/editors/config.js",
     "/admin/editors/styles.js": "/admin/editors/styles.js",
     "/admin/editors/contents.css": "/admin/editors/contents.css",
