--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,8 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
+MAIL_FROM_ADDRESS=
+MAIL_FROM_NAME=
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
