--- a/.env.example
+++ b/.env.example
@@ -44,6 +44,7 @@ UWUM_INFO_URL=
 UWUM_NOTIFY_EMAIL_URL=
 UWUM_CALLBACK_URL=
 UWUM_TOKEN_URL=
+UWUM_REGISTER_ASSOC_URL=
 OTM_APP_ID=
 OTM_EVENTS_URL=
 OTM_MAPPING_URL=
